# Tic-Tac-Toe

./: .gitignore  CMakeLists.txt  tic_tac_toe.kdev4
src/: game.cpp  game.hpp  globals.hpp  main.cpp
src/graphics/: graphic_manager.cpp  graphic_manager.hpp
src/logic/: logic_manager.cpp  logic_manager.hpp
src/resources/: board.cpp  board.hpp  enemy.cpp  enemy.hpp  field.hpp  player.cpp  player.hpp  resource_manager.cpp  resource_manager.hpp
src/resources/manager/: resource_manager.cpp  resource_manager.hpp  resource_read_getter.hpp  resource_write_getter.hpp
src/resources/managers/: resource_manager.hpp  resource_read_getter.hpp  resource_write_getter.hpp  texture_manager.cpp  texture_manager.hpp
